# dictate-your-terms

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  flake.nix
.cargo/: config.toml
.claude/agents/: builder.md  planner.md
.github/workflows/: ci.yml
config/: default.toml
docs/: api.md  architecture.md  deployment.md  idea.md  index.md  integrations.md  market-analysis.md  setup.md  tech-stack.md  testing.md  workflow.md
dyt-cli/: Cargo.toml
dyt-cli/src/: encode.rs  main.rs  record_fixture.rs  smoke.rs  transport.rs
dyt-cli/tests/: encode_roundtrip.rs
dyt-daemon/: Cargo.toml  build.rs
dyt-daemon/benches/: transcribe.rs
dyt-daemon/src/: config.rs  main.rs  server.rs
dyt-daemon/src/provider/: whisper_cpp.rs
dyt-daemon/tests/: e2e_live.rs  server_http.rs
editors/nvim/lua/dyt/: init.lua
editors/nvim/plugin/: dyt.lua
scripts/: setup.ps1  setup.sh
specs/: architecture.md  audio-capture-design.md  behavioral-contracts.md  distribution.md  dyt-cli.md  dyt-daemon.md
stt-cli/: Cargo.toml
stt-cli/src/: capture.rs  encode.rs  lib.rs  main.rs
stt-daemon/: Cargo.toml
stt-daemon/src/: config.rs  lib.rs  main.rs  provider.rs  server.rs
stt-daemon/src/provider/: whisper_cpp.rs
stt-daemon/tests/: server_http.rs
