[package]
name = "dyt-daemon"
version.workspace = true
edition.workspace = true
description = "Persistent inference engine for DictateYourTerms — keeps the STT model hot in memory"

[[bin]]
name = "dyt-daemon"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"

# whisper-rs: on Linux/macOS, auto-detection handles BLAS; no feature flag needed.
[target.'cfg(not(windows))'.dependencies]
whisper-rs = "0.14"

# whisper-rs: on Windows, OpenBLAS must be explicitly requested via feature flag
# because whisper.cpp's CMake does not auto-detect it on Windows.
# Requires OpenBLAS installed via vcpkg (see docs/setup.md).
[target.'cfg(windows)'.dependencies]
whisper-rs = { version = "0.14", features = ["openblas"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
